# neural-networks-and-deep-learning

./: .gitignore  HOWTO.md  PREREQUISITES.md  README.md  TUTORIAL.md  pyproject.toml
book/: README.md  about.html  acknowledgements.html  bugfinder.html  chap1.html  chap2.html  chap3.html  chap4.html  chap5.html  chap6.html  exercises_and_problems.html  faq.html  index.html  sai.html  supporters.html
exercises/: ch1_average_darkness.py  ch1_basic_network.py  ch1_no_hidden_layer.py  ch1_svm_baseline.py  ch3_cross_entropy.py  ch3_early_stopping.py  ch3_l1_regularization.py  ch3_learning_rate.py  ch3_learning_rate_schedule.py  ch3_momentum.py  ch3_overfitting.py  ch3_quadratic_cost.py  ch3_weight_init.py  ch5_vanishing_gradient.py  ch6_basic_conv.py  ch6_conv_softmax_only.py  ch6_double_conv.py  ch6_double_conv_relu.py  ch6_double_conv_sigmoid.py  ch6_expanded_data.py  ch6_fc_baseline.py
plots/: false_minima.py  generate_gradient.py  misleading_gradient.py  misleading_gradient_contours.py  mnist.py  more_data.py  multiple_eta.py  overfitting.py  pca_limitations.py  valley.py  valley2.py  weight_initialization.py
src/: expand_mnist.py  mnist_average_darkness.py  mnist_loader.py  network.py  network2.py  network3.py
tests/: test_networks.py
